# typeshed-stats

./: .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  README.md  build_constraints.txt  cli.html  example.csv  gather.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  regenerate_examples.py  renovate.json  requirements-all.txt  requirements-dev.txt  requirements-mypy.txt  requirements-tests.txt  requirements.txt  runtests.py  serialize.html  sitemap.xml  stats-csv.html  stats.html  stats_as_csv.csv  test_typeshed_stats.py  typeshed_stats.py  website_macros.py
.github/: renovate.json  renovate.json5
.github/workflows/: check-requirements.yml  check.yml  lint.yml  publish.yml  regen-examples-and-docs.yml  test-website.yml  test.yml  typecheck.yml
cli/: index.html
examples/: example.csv  example.html  example.json  example.md
gather/: index.html
requirements/: all.txt  docs.txt  flake8.txt  misc-lint.txt  mypy.txt  pytest.txt  rich.txt  typecheck.txt
scripts/: gather.md.jinja  regenerate.py  regenerate_examples_and_docs.py  runtests.py
scripts/templates/: cli.md.jinja  stats.md.jinja
search/: search_index.json
serialize/: index.html
src/typeshed_stats/: __init__.py  __main__.py  _cli.py  _markdown_template.md.jinja  api.py  cli.py  gather.py  markdown_template.md  markdown_template.txt  serialize.py
src/typeshed_stats/_cli/: __init__.py  _typeshed_explore_cli.py  _typeshed_stats_cli.py
stats/: index.html
stats-csv/: index.html
stats_website/: cli.md  gather.md  index.md  serialize.md  stats-csv.md  stats.md  stats_as_csv.csv
stats_website/.snippets/: links.md  refs.md
stats_website/javascripts/: filtertable.js
tests/: conftest.py  test___all__.py  test___init__.py  test__cli.py  test_api.py  test_gather.py  test_running_from_command_line.py  test_serialize.py
